test/Dialect/Poly/read_const_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  function.def @bad(%0: !felt.type) {
    // expected-error@+1 {{'poly.read_const' op only valid within a 'poly.template' ancestor}}
    %1 = poly.read_const @X : !felt.type
    function.return
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TComponentV { // expected-note {{must reference a param or expr of this template}}
    poly.param @A

    struct.def @ComponentV {
      function.def @compute(%0: !felt.type) -> !struct.type<@TComponentV::@ComponentV<[@A]>> {
        %self = struct.new : !struct.type<@TComponentV::@ComponentV<[@A]>>
        function.return %self : !struct.type<@TComponentV::@ComponentV<[@A]>>
      }
      function.def @constrain(%self: !struct.type<@TComponentV::@ComponentV<[@A]>>, %0: !felt.type) {
        // expected-error@+1 {{'poly.read_const' op references unknown symbol "@X"}}
        %1 = poly.read_const @X : !felt.type
        constrain.eq %0, %1 : !felt.type
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TReadConstBadTypeA {
    poly.param @T

    struct.def @ReadConstBadTypeA {
      function.def @compute() -> !struct.type<@TReadConstBadTypeA::@ReadConstBadTypeA<[@T]>> {
        %self = struct.new : !struct.type<@TReadConstBadTypeA::@ReadConstBadTypeA<[@T]>>
        function.return %self : !struct.type<@TReadConstBadTypeA::@ReadConstBadTypeA<[@T]>>
      }
      function.def @constrain(%self: !struct.type<@TReadConstBadTypeA::@ReadConstBadTypeA<[@T]>>) {
        // expected-error@+1 {{'poly.read_const' op result #0 must be integral, felt, or typevar type, but got '!array.type<54 x index>'}}
        %0 = poly.read_const @T : !array.type<54 x index>
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TReadConstBadTypeB {
    poly.param @T

    struct.def @ReadConstBadTypeB {
      function.def @compute() -> !struct.type<@TReadConstBadTypeB::@ReadConstBadTypeB<[@T]>> {
        %self = struct.new : !struct.type<@TReadConstBadTypeB::@ReadConstBadTypeB<[@T]>>
        function.return %self : !struct.type<@TReadConstBadTypeB::@ReadConstBadTypeB<[@T]>>
      }
      function.def @constrain(%self: !struct.type<@TReadConstBadTypeB::@ReadConstBadTypeB<[@T]>>) {
        // expected-error@+1 {{'poly.read_const' op result #0 must be integral, felt, or typevar type, but got '!struct.type<@TReadConstBadTypeB::@ReadConstBadTypeB<[@T]>>'}}
        %0 = poly.read_const @T : !struct.type<@TReadConstBadTypeB::@ReadConstBadTypeB<[@T]>>
        function.return
      }
    }
  }
}
// -----
module attributes {llzk.lang} {
  poly.template @TReadConstBadTypeC {
    poly.param @T

    struct.def @ReadConstBadTypeC {
      function.def @compute() -> !struct.type<@TReadConstBadTypeC::@ReadConstBadTypeC<[@T]>> {
        %self = struct.new : !struct.type<@TReadConstBadTypeC::@ReadConstBadTypeC<[@T]>>
        function.return %self : !struct.type<@TReadConstBadTypeC::@ReadConstBadTypeC<[@T]>>
      }
      function.def @constrain(%self: !struct.type<@TReadConstBadTypeC::@ReadConstBadTypeC<[@T]>>) {
        // expected-error@+1 {{'poly.read_const' op result #0 must be integral, felt, or typevar type, but got '!string.type'}}
        %0 = poly.read_const @T : !string.type
        function.return
      }
    }
  }
}
